// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag component Should use use color 1`] = `
<DocumentFragment>
  <div
    class="tag is-white"
  >
    <span
      class=""
    >
      tag
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag component should be Large 1`] = `
<DocumentFragment>
  <div
    class="tag is-large"
  >
    <span
      class=""
    >
      Tag Large
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag component should be group tags 1`] = `
<DocumentFragment>
  <div
    class="tags has-addons"
  >
    <div
      class="tag"
    >
      <span
        class=""
      >
        Tag 1
      </span>
    </div>
    <div
      class="tag is-delete"
    />
  </div>
</DocumentFragment>
`;

exports[`Tag component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="tag other-class this-is-a-test"
  >
    <span
      class=""
    >
      Tag name
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag component should have close button 1`] = `
<DocumentFragment>
  <div
    class="tag"
  >
    <span
      class=""
    >
      Tag Large
    </span>
    <button
      class="delete is-small"
    />
  </div>
</DocumentFragment>
`;

exports[`Tag component should have info color 1`] = `
<DocumentFragment>
  <div
    class="tag is-info"
  >
    <span
      class=""
    >
      Tag Large
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag component should have remove button 1`] = `
<DocumentFragment>
  <div
    class="tag is-delete"
  />
</DocumentFragment>
`;

exports[`Tag component should render 1`] = `
<DocumentFragment>
  <div
    class="tag"
  >
    <span
      class=""
    />
  </div>
</DocumentFragment>
`;

exports[`Tag component should render 2`] = `
<DocumentFragment>
  <div
    class="tags"
  />
</DocumentFragment>
`;

exports[`Tag component should trim content 1`] = `
<DocumentFragment>
  <div
    class="tag"
  >
    <span
      class="has-ellipsis"
    >
      Very large text with some extras
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag component should use inline styles 1`] = `
<DocumentFragment>
  <div
    class="tag"
    style="width: 250px;"
  >
    <span
      class=""
    >
      Tag name
    </span>
  </div>
</DocumentFragment>
`;
